--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, windows-latest]
-        node-version: [16.x, 17.x, 18.x]
+        node-version: [16.x, 17.x, 18.x, 19.x, 20.x, 21.x]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Clone repository
