--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         platform: [ubuntu-latest, windows-latest]
-        node-version: [16.x, 17.x, 18.x, 19.x, 20.x, 21.x]
+        node: [18, 19, 20, 21]
     runs-on: ${{ matrix.platform }}
     steps:
       - name: Clone repository
@@ -25,7 +25,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ env.node-version }}
+          node-version: ${{ matrix.node }}
 
       - name: Install npm dependencies
         run: npm install
